# RAG_Based_AI_Agent

./: .env  main.py  pyproject.toml  requirements.txt
amazon_web_scrapper/: README.md  amazon.py  fast_server.py  requirements1.txt  server.py
app/: Home.py
app/components/: cards.py  forms.py
backend/: graph.py  schemas.py  state.py
backend/llm/: models.py  prompts.py
backend/retrieval/: ingest.py  vectordb.py  vectordb1.py
backend/tools/: cart_link.py  normalize.py  rag_explainer.py  scoring.py
backend/tools/providers/: amazon_api.py  fakestore.py
backend/utils/: cfg.py  log.py
configs/: settings.yaml
data/guides/: headphones_guide.txt  laptop_guide.txt  smartphone_guide.txt
scripts/: ingest_guides.py  smoke_run.py
tests/: test_cart_link.py  test_normalize.py  test_scoring.py
