[project]
name = "rag-based-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "chromadb>=1.0.21",
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "huggingface-hub>=0.34.6",
    "langchain>=0.2.0",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-google-genai==2.1.9",
    "langgraph>=0.0.56",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pypdf>=6.0.0",
    "python-multipart>=0.0.20",
    "ragas>=0.3.4",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
    "tiktoken>=0.11.0",
    "unstructured>=0.18.14",
    "uvicorn>=0.35.0",
]
